--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <li><span>Developer</span></li>
         <li><span>Programmer</span></li>
         <li><span>Roblox Dev</span></li>
-        <li><span>YouTuber</span></li>
+        <li><span>Game Owner</span></li>
       </ul>
     </div>
 
