--- a/index.html
+++ b/index.html
@@ -48,13 +48,43 @@
       Aiden's Portfolio
     </h1>
 
-    <div class="wrapper text-center">
+    <div class="wrapper text-center" style="padding-bottom: 140vh">
       <ul class="dynamic-txts" style="text-align: center">
         <li><span>Developer</span></li>
         <li><span>Programmer</span></li>
         <li><span>Roblox Dev</span></li>
         <li><span>Game Owner</span></li>
       </ul>
+    </div>
+
+    <div class="parallax-wrapper" style="padding-top: 330px">
+      <div
+        class="content"
+        style="text-align: center; transform: translate(0px, -25vh)"
+      >
+        <b style="font-size: 5.6vh">
+          Owner, Lead Developer, & Social Media Manager<br
+        /></b>
+        <h3 style="font-weight: lighter">
+          for one of the most immerse & realistic Roblox RP games
+        </h3>
+      </div>
+      <div
+        style="
+          text-align: center;
+          transform: translate(0px, -15vh);
+          margin: 0 auto;
+          padding: 50px;
+          font-weight: bolder;
+          font-size: 10vh;
+          width: 50%;
+          background: rgba(60, 60, 60, 0.5);
+
+          backdrop-filter: blur(10px);
+        "
+      >
+        <b id="visits"> 300,000 Visits </b>
+      </div>
     </div>
 
     <!--SCRIPTS-->
@@ -73,5 +103,6 @@
       integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
       crossorigin="anonymous"
     ></script>
+    <script src="script.js"></script>
   </body>
 </html>
