--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <title>Portfolio</title>
     <link rel="stylesheet" href="style.css" />
     <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
-      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary" style="z-index: 99">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
         <a class="navbar-brand" style="padding: 1vh" href="#">Aiden Johnson</a>
         <button
@@ -42,24 +42,31 @@
         </div>
       </div>
     </nav>
-    <div style="text-align: center; margin-top: 35vh">
-      <canvas id="canvas"></canvas>
-      <div class="">
-        <p style="font-size: 3em; font-weight: light">
+
+    <canvas id="canvas"></canvas>
+    <div class="nopointer" style="text-align: center; margin-top: 35vh">
+      <div style="display: inline-block">
+        <p style="font-size: 3em; font-weight: light; display: inline-block">
           Hello, I'm
-          <span id="test" style="font-weight: bolder; color: rgb(249, 104, 104)"
-            >Rapid</span
+          <span
+            id="test"
+            style="
+              font-weight: bolder;
+              color: rgb(249, 104, 104);
+              display: inline;
+            "
+            >Aiden</span
           >
         </p>
       </div>
     </div>
 
-    <div style="text-align: center; margin: -3vh">
-      <div class="typewriter">
+    <div class="nopointer" style="text-align: center; margin: -3vh">
+      <div class="typewriter" style="display: inline-block">
         <p
           class="typewriter-text"
           id="typewriter-text"
-          style="font-weight: lighter"
+          style="font-weight: lighter; display: inline-block"
         >
           I'm a student, programmer, and game developer
         </p>
@@ -67,18 +74,19 @@
     </div>
 
     <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
+
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
       integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
       crossorigin="anonymous"
     ></script>
     <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
-      integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
+      integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
       crossorigin="anonymous"
     ></script>
     <script src="script.js"></script>
