--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portfolio</title>
+    <title>Aiden Johnson</title>
     <link rel="stylesheet" href="style.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
@@ -13,7 +13,7 @@
     />
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <!--<nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
         <a class="navbar-brand" style="padding: 1vh" href="#">Aiden Johnson</a>
         <button
@@ -41,12 +41,30 @@
           </ul>
         </div>
       </div>
-    </nav>
+    </nav>-->
+    <ul
+      class="nav nav-underline justify-content-center"
+      style="padding-top: 2vh"
+    >
+      <li class="nav-item">
+        <a class="nav-link text-white" href="#">Landing</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link text-white" href="#">About</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link text-white" href="#">Projects</a>
+      </li>
+    </ul>
 
     <canvas id="canvas"></canvas>
+
     <div class="nopointer" style="text-align: center; margin-top: 35vh">
       <div style="display: inline-block">
-        <p style="font-size: 3em; font-weight: light; display: inline-block">
+        <p
+          id="greet-text"
+          style="font-size: 3em; font-weight: light; display: inline-block"
+        >
           Hello, I'm
           <span
             id="test"
@@ -73,12 +91,25 @@
       </div>
     </div>
 
+    <div
+      class="nopointer"
+      style="text-align: center; margin-top: 50vh; margin-bottom: 10vh"
+    >
+      <div style="display: inline-block">
+        <p
+          id="greet-text"
+          style="font-size: 3em; font-weight: light; display: inline-block"
+        >
+          About
+        </p>
+      </div>
+    </div>
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
-
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
       integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
@@ -86,7 +117,7 @@
     ></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
-      integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
+      integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabsYfZo0T0to5eqruptLy"
       crossorigin="anonymous"
     ></script>
     <script src="script.js"></script>
