--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
       style="padding-top: 2vh"
     >
       <li class="nav-item">
-        <a class="nav-link text-white" href="#">Landing</a>
+        <a class="nav-link text-white">Landing</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link text-white" href="#">About</a>
+        <a class="nav-link text-white" href="#about">About</a>
       </li>
       <li class="nav-item">
         <a class="nav-link text-white" href="#">Projects</a>
@@ -93,9 +93,9 @@
 
     <div
       class="nopointer"
-      style="text-align: center; margin-top: 50vh; margin-bottom: 10vh"
+      style="text-align: center; margin-top: 60vh; margin-bottom: 10vh"
     >
-      <div style="display: inline-block">
+      <div style="display: inline-block" id="about">
         <p
           id="greet-text"
           style="font-size: 3em; font-weight: light; display: inline-block"
