--- a/index.html
+++ b/index.html
@@ -12,40 +12,79 @@
       crossorigin="anonymous"
     />
     <link
-  rel="stylesheet"
-  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
-/>
-
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+    />
   </head>
   <body>
-   <ul
-      id="landing"
-      class="nav nav-underline justify-content-center"
-      style="padding-top: 2vh; font-size: 1.1em;"
+    <p class="fixed" id="landing"></p>
+    <nav
+      class="navbar fixed-top navbar-expand-lg py-3"
+      style="backdrop-filter: blur(8px)"
     >
-    <li class="nav-item">
-      <a class="nav-link text-white" href="#about-me">About Me</a>
-    </li>
-      <li class="nav-item">
-        <a class="nav-link text-white" href="#landing">Landing</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link text-white" href="#experience">Experience</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link text-white" href="#projects">Projects</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link text-white" href="#contact">Contact</a>
-      </li>
-    </ul>
-    <a class="fixed-icon text-white" href="https://linkedin.com/in/aiden-johnson-35991a2b2/" target="_blank">
-      <i class="fa-brands fa-linkedin"></i>
-    </a>
+      <div class="container-fluid">
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav mx-auto" id="navBarButtons">
+            <!-- Use mx-auto to center align the nav links -->
+            <li class="nav-item">
+              <a class="nav-link active" href="#landing">Landing</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#about-me">About Me</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#experience">Experience</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#projects">Projects</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
 
-    <canvas id="canvas"></canvas>
+    <div style="position: absolute; top: 2vh; right: 20px; z-index: 10000">
+      <a
+        class="p-2 text-white me-auto no-underline"
+        href="https://linkedin.com/in/aiden-johnson-35991a2b2/"
+        target="_blank"
+      >
+        <i class="fa-brands fa-linkedin fa-xl"></i>
+      </a>
+      <a
+        class="p-2 text-white me-auto no-underline"
+        href="https://github.com/arjohnsonn"
+        target="_blank"
+      >
+        <i class="fa-brands fa-github fa-xl"></i>
+      </a>
+      <a
+        class="p-2 text-white me-auto no-underline"
+        href="https://instagram.com/aidenn.johnson"
+        target="_blank"
+      >
+        <i class="fa-brands fa-instagram fa-xl"></i>
+      </a>
+    </div>
 
-    <div class="nopointer" style="text-align: center; margin-top: 35vh">
+    <canvas
+      id="canvas"
+      style="position: absolute; z-index: -1"
+      class="scroll-fade"
+    ></canvas>
+
+    <div class="nopointer" style="text-align: center; margin-top: 45vh" id="">
       <div style="display: inline-block">
         <p
           id="greet-text"
@@ -78,65 +117,81 @@
       </div>
     </div>
 
-    
     <!-- ABOUT ME -->
-    <div style="text-align: center; margin-top: 50vh;">
+    <div style="text-align: center; margin-top: 50vh">
       <div style="display: inline-block" id="about-me">
-        <p style="font-size: 3em; font-weight: bold; display: inline-block" class="fade-up-desktop fade-mobile animation">
+        <p
+          style="font-size: 3em; font-weight: bold; display: inline-block"
+          class="fade-up-desktop fade-mobile animation"
+        >
           About Me
         </p>
       </div>
     </div>
     <div
-    class="container overflow-hidden text-center fade-up-desktop fade-mobile animation"
-    style="padding-bottom: 10vh"
-  >
-    <div class="row gx-5">
-      <!-- ENTRIES -->
-      <div class="col">
-        <div class="p-4 project-card">
-         <div class="fade-right-desktop fade-mobile animation"> <!-- PAST -->
-          <h3>
-            Past
-           </h3>
-           <p>
-            Taking after my father, I initially wanted to become an aerospace engineer. However, as I grew older with technology surrounding me, I became naturally experienced in all things software. Because of this, I decided to combine my desire of becoming like my father and my love for software, and entered the world of programming.
-           </p>
-         </div>
-         <div class="fade-right-desktop fade-mobile animation"> <!-- PRESENT -->
-          <h3>
-            Present
-           </h3>
-           <p>
-            Currently, I am a college freshman attending the <b style="color: rgb(212, 120, 0);">University of Texas at Austin</b> for <b>Computer Science</b>. Additionally, on the side, I own and program a popular Roblox game played over 470,000 times as a front & back-end developer. 
-           </p>
-         </div>
-         <div class="fade-right-desktop fade-mobile animation"> <!-- FUTURE -->
-          <h3>
-            Future
-           </h3>
-           <p>
-            Every goal I have currently are building blocks to build my future, which include graduating from college, and becoming either a software engineer or entering the cybersecurity field. However, all things technology and software will pique my interest always.
-          </p>
-         </div>
+      class="container overflow-hidden text-center fade-up-desktop fade-mobile animation"
+      style="padding-bottom: 10vh"
+    >
+      <div class="row gx-5">
+        <!-- ENTRIES -->
+        <div class="col">
+          <div class="p-4 project-card">
+            <div class="fade-right-desktop fade-mobile animation">
+              <!-- PAST -->
+              <h3>Past</h3>
+              <p>
+                Taking after my father, I initially wanted to become an
+                aerospace engineer. However, as I grew older with technology
+                surrounding me, I became naturally experienced in all things
+                software. Because of this, I decided to combine my desire of
+                becoming like my father and my love for software, and entered
+                the world of programming.
+              </p>
+            </div>
+            <div class="fade-right-desktop fade-mobile animation">
+              <!-- PRESENT -->
+              <h3>Present</h3>
+              <p>
+                Currently, I am a college freshman attending the
+                <b style="color: rgb(212, 120, 0)"
+                  >University of Texas at Austin</b
+                >
+                for <b>Computer Science</b>. Additionally, on the side, I own
+                and program a popular Roblox game played over 470,000 times as a
+                front & back-end developer.
+              </p>
+            </div>
+            <div class="fade-right-desktop fade-mobile animation">
+              <!-- FUTURE -->
+              <h3>Future</h3>
+              <p>
+                Every goal I have currently are building blocks to build my
+                future, which include graduating from college, and becoming
+                either a software engineer or entering the cybersecurity field.
+                However, all things technology and software will pique my
+                interest always.
+              </p>
+            </div>
+          </div>
         </div>
-      </div>
-      <div class="col">
-        <div class="p-4 project-card">
-          <img
-                    src="./Images/Portrait.png"
-                    class="d-block w-100"
-                    alt="..."
-                />
+
+        <div class="w-100" id="column-break" style="display: unset"></div>
+
+        <div class="col">
+          <div class="p-4 project-card">
+            <img src="./Images/Portrait.png" class="d-block w-100" alt="..." />
+          </div>
         </div>
       </div>
     </div>
-  </div>
 
     <!-- EXPERIENCE -->
-    <div style="text-align: center; margin-top: 20vh;">
+    <div style="text-align: center; margin-top: 20vh">
       <div style="display: inline-block" id="experience">
-        <p style="font-size: 3em; font-weight: bold; display: inline-block" class="fade-up-desktop fade-mobile animation">
+        <p
+          style="font-size: 3em; font-weight: bold; display: inline-block"
+          class="fade-up-desktop fade-mobile animation"
+        >
           Experience
         </p>
       </div>
@@ -161,6 +216,12 @@
             </li>
             <li>
               <p>
+                Features a platform-leading advanced anti-exploit system that
+                detects exploiters who inject and run malicious scripts
+              </p>
+            </li>
+            <li>
+              <p>
                 Started as a high school student with other extracurriculars and
                 sports
               </p>
@@ -173,31 +234,60 @@
       </ul>
     </div>
 
-    <div style="text-align: center; margin-top: 10vh;">
+    <div style="text-align: center; margin-top: 10vh">
       <div style="display: inline-block" id="experience">
-        <p style="font-size: 2em; font-weight: light; display: inline-block" class="fade-down-desktop fade-mobile animation">
+        <p
+          style="font-size: 2em; font-weight: light; display: inline-block"
+          class="fade-down-desktop fade-mobile animation"
+        >
           Skills
         </p>
       </div>
       <p class="fade-up-desktop fade-mobile animation">
-        <img src="https://img.shields.io/badge/Python-3776AB?style=for-the-badge&logo=python&logoColor=white"/>
-        <img src="https://img.shields.io/badge/HTML5-E34F26?style=for-the-badge&logo=html5&logoColor=white"/>
-        <img src="https://img.shields.io/badge/CSS3-1572B6?style=for-the-badge&logo=css3&logoColor=white"/>
-        <img src="https://img.shields.io/badge/JavaScript-F7DF1E?style=for-the-badge&logo=javascript&logoColor=black">
-        <img src="https://img.shields.io/badge/Java-ED8B00?style=for-the-badge&logo=java&logoColor=white">
-        <img src="https://img.shields.io/badge/MongoDB-%234ea94b.svg?style=for-the-badge&logo=mongodb&logoColor=white">
-        <img src="https://img.shields.io/badge/node.js-6DA55F?style=for-the-badge&logo=node.js&logoColor=white">
-        <img src="https://img.shields.io/badge/lua-2C2D72?style=for-the-badge&logo=lua&logoColor=white">
-        <img src="https://img.shields.io/badge/Roblox-000000?style=for-the-badge&logo=roblox&logoColor=white">
-        <img src="https://img.shields.io/badge/Luau-00A2FF?style=for-the-badge&logo=robloxstudio&logoColor=white">
-        <img src="https://img.shields.io/badge/Xcode-147EFB?style=for-the-badge&logo=xcode&logoColor=white">
-        <img src="https://img.shields.io/badge/Swift-F05138?style=for-the-badge&logo=swift&logoColor=white">
+        <img
+          src="https://img.shields.io/badge/Python-3776AB?style=for-the-badge&logo=python&logoColor=white"
+        />
+        <img
+          src="https://img.shields.io/badge/HTML5-E34F26?style=for-the-badge&logo=html5&logoColor=white"
+        />
+        <img
+          src="https://img.shields.io/badge/CSS3-1572B6?style=for-the-badge&logo=css3&logoColor=white"
+        />
+        <img
+          src="https://img.shields.io/badge/JavaScript-F7DF1E?style=for-the-badge&logo=javascript&logoColor=black"
+        />
+        <img
+          src="https://img.shields.io/badge/Java-ED8B00?style=for-the-badge&logo=java&logoColor=white"
+        />
+        <img
+          src="https://img.shields.io/badge/MongoDB-%234ea94b.svg?style=for-the-badge&logo=mongodb&logoColor=white"
+        />
+        <img
+          src="https://img.shields.io/badge/node.js-6DA55F?style=for-the-badge&logo=node.js&logoColor=white"
+        />
+        <img
+          src="https://img.shields.io/badge/lua-2C2D72?style=for-the-badge&logo=lua&logoColor=white"
+        />
+        <img
+          src="https://img.shields.io/badge/Roblox-000000?style=for-the-badge&logo=roblox&logoColor=white"
+        />
+        <img
+          src="https://img.shields.io/badge/Luau-00A2FF?style=for-the-badge&logo=robloxstudio&logoColor=white"
+        />
+        <img
+          src="https://img.shields.io/badge/Xcode-147EFB?style=for-the-badge&logo=xcode&logoColor=white"
+        />
+        <img
+          src="https://img.shields.io/badge/Swift-F05138?style=for-the-badge&logo=swift&logoColor=white"
+        />
       </p>
     </div>
 
-
     <!-- PROJECTS -->
-    <div style="text-align: center; margin-top: 15vh" class="fade-up-desktop fade-mobile animation">
+    <div
+      style="text-align: center; margin-top: 15vh"
+      class="fade-up-desktop fade-mobile animation"
+    >
       <!-- Adjusted margin-top to bring closer -->
       <div id="projects">
         <p style="font-size: 3em; font-weight: bold; display: inline-block">
@@ -264,18 +354,25 @@
               </button>
             </div>
             <p style="padding-top: 3vh">
-              Loved by tens of thousands of players, we are recognized as one of the
-              most realistic Roblox roleplay games with over 80,000 hours of playtime. Programmed with <b>Luau</b>,
-              Roblox's version of Lua, on both front-end and back-end.<br /><br />
+              Loved by tens of thousands of players, we are recognized as one of
+              the most realistic Roblox roleplay games with over 80,000 hours of
+              playtime. Programmed with <b>Luau</b>, Roblox's version of Lua, on
+              both front-end and back-end.<br /><br />
               <img
                 src="https://img.shields.io/badge/dynamic/json?url=https%3A%2F%2Fgames.roblox.com%2Fv1%2Fgames%3FuniverseIds%3D4221645607&query=data%5B0%5D.visits&style=for-the-badge&label=Visits&color=white"
                 alt="Game Visits"
               />
-              <p>
-                <img src="https://img.shields.io/badge/lua-2C2D72?style=for-the-badge&logo=lua&logoColor=white">
-                <img src="https://img.shields.io/badge/Roblox-000000?style=for-the-badge&logo=roblox&logoColor=white">
-                <img src="https://img.shields.io/badge/Luau-00A2FF?style=for-the-badge&logo=robloxstudio&logoColor=white">
-              </p>
+            </p>
+            <p>
+              <img
+                src="https://img.shields.io/badge/lua-2C2D72?style=for-the-badge&logo=lua&logoColor=white"
+              />
+              <img
+                src="https://img.shields.io/badge/Roblox-000000?style=for-the-badge&logo=roblox&logoColor=white"
+              />
+              <img
+                src="https://img.shields.io/badge/Luau-00A2FF?style=for-the-badge&logo=robloxstudio&logoColor=white"
+              />
             </p>
           </div>
         </div>
@@ -297,20 +394,29 @@
                   /></a>
                 </div>
               </div>
-              
             </div>
             <p style="padding-top: 3vh">
               Created for the goal of managing my Roblox game without even
               joining the game. This bot is able to manage in-game player data,
               moderate players, keep track of Discord & game moderations, and
               remotely communicate with the game.<br /><br />
-              <p>
-                <img src="https://img.shields.io/badge/Roblox-000000?style=for-the-badge&logo=roblox&logoColor=white">
-                <img src="https://img.shields.io/badge/JavaScript-F7DF1E?style=for-the-badge&logo=javascript&logoColor=black">
-                <img src="https://img.shields.io/badge/MongoDB-%234ea94b.svg?style=for-the-badge&logo=mongodb&logoColor=white">
-                <img src="https://img.shields.io/badge/node.js-6DA55F?style=for-the-badge&logo=node.js&logoColor=white">
-                <img src="https://img.shields.io/badge/RBX Open Cloud API-00A2FF?style=for-the-badge&logo=roblox&logoColor=white">
-              </p>
+            </p>
+            <p>
+              <img
+                src="https://img.shields.io/badge/Roblox-000000?style=for-the-badge&logo=roblox&logoColor=white"
+              />
+              <img
+                src="https://img.shields.io/badge/JavaScript-F7DF1E?style=for-the-badge&logo=javascript&logoColor=black"
+              />
+              <img
+                src="https://img.shields.io/badge/MongoDB-%234ea94b.svg?style=for-the-badge&logo=mongodb&logoColor=white"
+              />
+              <img
+                src="https://img.shields.io/badge/node.js-6DA55F?style=for-the-badge&logo=node.js&logoColor=white"
+              />
+              <img
+                src="https://img.shields.io/badge/RBX Open Cloud API-00A2FF?style=for-the-badge&logo=roblox&logoColor=white"
+              />
             </p>
           </div>
         </div>
