--- a/index.html
+++ b/index.html
@@ -439,7 +439,8 @@
       integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabsYfZo0T0to5eqruptLy"
       crossorigin="anonymous"
     ></script>
-    <script src="landing.js"></script>
-    <script src="script.js"></script>
+    <script type="module" src="landing.js"></script>
+    <script type="module" src="script.js"></script>
+    <script type="module" src="isMobile.js"></script>
   </body>
 </html>
