Update game description

--- a/index.html
+++ b/index.html
@@ -354,10 +354,10 @@
               </button>
             </div>
             <p style="padding-top: 3vh">
-              Loved by tens of thousands of players, we are recognized as one of
+              Loved by tens of thousands of players & recognized as one of
               the most realistic Roblox roleplay games with over 80,000 hours of
               playtime. Programmed with <b>Luau</b>, Roblox's version of Lua, on
-              both front-end and back-end.<br /><br />
+              both frontend and backend. We are in the <b>99th</b> percentile on the platform for average session time.</b><br /><br />
               <img
                 src="https://img.shields.io/badge/dynamic/json?url=https%3A%2F%2Fgames.roblox.com%2Fv1%2Fgames%3FuniverseIds%3D4221645607&query=data%5B0%5D.visits&style=for-the-badge&label=Visits&color=white"
                 alt="Game Visits"
