--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <body>
     <p class="fixed" id="landing"></p>
     <nav
-      class="navbar fixed-top navbar-expand-lg py-3"
+      class="navbar fixed-top navbar-expand-lg"
       style="backdrop-filter: blur(8px)"
     >
       <div class="container-fluid">
@@ -54,7 +54,7 @@
       </div>
     </nav>
 
-    <div style="position: absolute; top: 2vh; right: 20px; z-index: 10000">
+    <div style="position: absolute; top: 2.25vh; right: 20px; z-index: 10000">
       <a
         class="p-2 text-white me-auto no-underline"
         href="https://linkedin.com/in/aiden-johnson-35991a2b2/"
@@ -158,7 +158,7 @@
                 >
                 for <b>Computer Science</b>. Additionally, on the side, I own
                 and program a popular Roblox game played over 470,000 times as a
-                front & back-end developer.
+                front & backend developer.
               </p>
             </div>
             <div class="fade-right-desktop fade-mobile animation">
@@ -210,7 +210,7 @@
             </li>
             <li>
               <p>
-                Programmed front-end and back-end features, security, and UI/UX.
+                Programmed frontend and backend features, security, and UI/UX.
                 Developed a Discord bot to manage players' data externally
               </p>
             </li>
@@ -227,7 +227,7 @@
               </p>
             </li>
             <li>
-              <p>Over 400,000 players & helped pay for my college expenses</p>
+              <p>Over 168,000 hours of playtime, 400,000 visits & helped pay for my college expenses</p>
             </li>
           </ul>
         </li>
@@ -355,7 +355,7 @@
             </div>
             <p style="padding-top: 3vh">
               Loved by tens of thousands of players & recognized as one of
-              the most realistic Roblox roleplay games with over 80,000 hours of
+              the most realistic Roblox roleplay games with over 160,000 hours of
               playtime. Programmed with <b>Luau</b>, Roblox's version of Lua, on
               both frontend and backend. We are in the <b>99th</b> percentile on the platform for average session time.</b><br /><br />
               <img
